--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="eniso.ia.lockify">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <!--
@@ -17,7 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lockify1">
-        <activity android:name=".LanguageActivity"></activity>
+        <activity android:name=".TestWifi"></activity>
+        <activity android:name=".tempWifi" />
+        <activity android:name=".temp2Activity" />
+        <activity android:name=".LanguageActivity" />
         <activity android:name=".BluetoothActivity" />
         <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".BottomNavMenuActivity" />
