--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,10 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.firebaseui:firebase-ui-storage:6.4.0'
+
+    
 }
