--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,14 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+
+    //recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     
 }
