--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lockify1">
-        <activity android:name=".ManageFamilyMembersActivity"></activity>
+        <activity android:name=".FireTemp"></activity>
+        <activity android:name=".ManageFamilyMembersActivity" />
         <activity android:name=".SplashScreenHomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,8 +37,9 @@
         <activity android:name=".BottomNavMenuActivity" />
         <activity android:name=".LockAndUnlockActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.Lockify1"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Lockify1" />
     </application>
 
 </manifest>
